[tool.poetry]
name = "PromptAI_Espotyxs"
version = "0.1.0"
description = "Just a library to make a group of words to military alphabet."
authors = [
    { name= "Xavier Sanchez", github= "@Espotyxs"}
    ]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/Espotyxs/promptai"
Issues = "https://github.com/Espotyxs/promptai/issues"